# dumpit-linux

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
proc/rhel7/: iomem  kallsyms  kcore  readelf.txt
proc/ubuntu22.04-arm64/: iomem  kcore
src/: error.rs  main.rs
tests/: test.rs
